Back to Desktop error with smoke simulation #38196

Closed
opened 2014-01-13 19:57:16 +01:00 by Jan-Niklas Bogatka · 7 comments

System Information
http://www.mein-pc.eu/Profil/Gaming-PC-/17005

Blender Version
Broken: 2.69.0 r60995

When pressing Shift + arrow left and then playing pack the simulation blender crashes at about the 12th frame and goes back to desktop without any message.
Same problem with other file under Ubuntu Linux.

Exact steps for others to reproduce the error
Load this file: Error_Smoke_simu.blend
Press shift + left arrow and then ALT + A

If there're any questions left, feel free to cantact me.

**System Information** http://www.mein-pc.eu/Profil/Gaming-PC-/17005 **Blender Version** Broken: 2.69.0 r60995 When pressing Shift + arrow left and then playing pack the simulation blender crashes at about the 12th frame and goes back to desktop without any message. Same problem with other file under Ubuntu Linux. **Exact steps for others to reproduce the error** Load this file: [Error_Smoke_simu.blend](https://archive.blender.org/developer/F67970/Error_Smoke_simu.blend) Press shift + left arrow and then ALT + A If there're any questions left, feel free to cantact me.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Jan-NiklasBogatka

Added subscriber: @Jan-NiklasBogatka

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2014-01-14 12:12:44 +01:00

This issue was referenced by blender/blender-addons-contrib@ca2a14491e

This issue was referenced by blender/blender-addons-contrib@ca2a14491e145de400a0a0f2424ba77b281d0372

This issue was referenced by ca2a14491e

This issue was referenced by ca2a14491e145de400a0a0f2424ba77b281d0372

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ca2a14491e.

Closed by commit ca2a14491e.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#38196
No description provided.