Fix T38196: Crash with smoke simulation

Issue was caused by KD tree being allocated with the wrong size.